--- a/html/popup.html
+++ b/html/popup.html
@@ -59,7 +59,7 @@
             </ul>
         </div>
     </div>
-    <script src="assets/lib/jquery.min.js"></script>
+    <script src="assets/lib/jquery-3.6.0.min.js"></script>
     <script src="assets/js/popup.js"></script>
 </body>
 
